Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMufTO/DrM3LBQ5F7oc7Rx8",
+      "authorship_tag": "ABX9TyMwI23xFsGwiPs03dhwQwwP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1114,10 +1114,10 @@
       ],
       "metadata": {
         "id": "GcHmsXOlazeE",
-        "outputId": "720fd7c9-5072-4eaf-ee9e-c43418dc9b47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "720fd7c9-5072-4eaf-ee9e-c43418dc9b47"
       },
       "execution_count": 53,
       "outputs": [
@@ -1136,11 +1136,11 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "Oih3CHE4A5FJ",
-        "outputId": "92d45a26-ac39-41de-8ff8-e5e3ada936dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Oih3CHE4A5FJ",
+        "outputId": "92d45a26-ac39-41de-8ff8-e5e3ada936dc"
       },
       "execution_count": 54,
       "outputs": [
@@ -1203,11 +1203,11 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "b-H1Xb-ZEE22",
-        "outputId": "d89d5f9f-5fe7-472c-ba9e-6704e32a8e15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b-H1Xb-ZEE22",
+        "outputId": "d89d5f9f-5fe7-472c-ba9e-6704e32a8e15"
       },
       "execution_count": 61,
       "outputs": [
@@ -1271,11 +1271,11 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "9H87Gbd0IO4Y",
-        "outputId": "19f59bae-8e6a-4998-f617-d30c8faa16db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9H87Gbd0IO4Y",
+        "outputId": "19f59bae-8e6a-4998-f617-d30c8faa16db"
       },
       "execution_count": 67,
       "outputs": [
@@ -1295,18 +1295,9 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
-        "### 問題 算数 3\n",
+        "# 問題 算数 3\n",
         "%%writefile temp.ts\n",
         "\n",
         "// Statement 1: The elephant weights less than the mouse\n",
@@ -1331,10 +1322,6 @@
         "console.log (heightComparison);\n",
         "console.log (pwdMatch);\n",
         "\n",
-        "let para1 = document.createElement('p');\n",
-        "let para2 = document.createElement('p');\n",
-        "let para3 = document.createElement('p');\n",
-        "\n",
         "let weightTest = weightComparison ? 'True — elephants weight less than mice!?' : 'False — of course an elephant is heavier than a mouse!';\n",
         "let heightTest = heightComparison ? 'True — an ostrich is indeed taller than a duck!' : 'False — apparently a duck is taller than an ostrich!?';\n",
         "let pwdTest = pwdMatch ? 'True — the passwords match.' : 'False — the passwords do not match; please check them';\n",
@@ -1345,10 +1332,22 @@
         "    "
       ],
       "metadata": {
-        "id": "hp950eaXgA6h"
+        "id": "hp950eaXgA6h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d9eb661-b2b1-40a4-c799-5afccfd1a39a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1356,45 +1355,42 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "xlqYoI-1I6wt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xlqYoI-1I6wt",
+        "outputId": "8121b25d-d173-496a-fa6a-8c1e7ffef599"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mfalse\u001b[39m\n",
+            "\u001b[33mtrue\u001b[39m\n",
+            "\u001b[33mfalse\u001b[39m\n",
+            "False — of course an elephant is heavier than a mouse!\n",
+            "True — an ostrich is indeed taller than a duck!\n",
+            "False — the passwords do not match; please check them\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sx_FSpdLnf0C"
+        "id": "HX6cdlafwp0v"
       },
       "source": [
-        "# 配列 array\n",
-        "\n",
-        "JavaScript では配列 array というが実はリストのこと。\n"
+        "# いまここ"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "IAjhH9F2nykZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "9601ce7d-6a4b-4e5c-dfe9-bf2f8cc9434d"
-      },
       "source": [
-        "%%javascript\n",
-        "\n",
-        "const list = document.querySelector(\"#output-area\");\n",
-        "list.innerHTML = '';\n",
-        "document.body.style = \"white-space: pre;\";\n",
-        "\n",
-        "function console.log (str) {\n",
-        "    let item = document.createElement('div');\n",
-        "    item.textContent = str;\n",
-        "    console.log(item);\n",
-        "};\n",
-        "\n",
+        "# 配列 array JavaScript では配列 array というが実はリストのこと。\n",
+        "%%writefile temp.ts\n",
         "\n",
         "let shopping = ['パン', '牛乳', 'チーズ', 'ハム', '麺'];\n",
         "console.log (shopping);\n",
@@ -1415,50 +1411,54 @@
         "    console.log (shopping[i]);\n",
         "}"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "sx_FSpdLnf0C",
+        "outputId": "69063683-da09-4af3-b547-276a59a438d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "const list = document.querySelector(\"#output-area\");\n",
-              "list.innerHTML = '';\n",
-              "document.body.style = \"white-space: pre;\";\n",
-              "\n",
-              "function print (str) {\n",
-              "    let item = document.createElement('div');\n",
-              "    item.textContent = str;\n",
-              "    list.appendChild(item);\n",
-              "};\n",
-              "\n",
-              "\n",
-              "let shopping = ['パン', '牛乳', 'チーズ', 'ハム', '麺'];\n",
-              "print (shopping);\n",
-              "print (typeof(shopping));\n",
-              "\n",
-              "print (shopping[0]);\n",
-              "\n",
-              "shopping[0] = 'タヒーニ';\n",
-              "print (shopping[0]);\n",
-              "\n",
-              "let sequence = [1, 1, 2, 3, 5, 8, 13];\n",
-              "let random = ['tree', 795, [0, 1, 2]];\n",
-              "\n",
-              "print (random[2][2]);\n",
-              "print (sequence.length);\n",
-              "\n",
-              "for (let i = 0; i < shopping.length; i++){\n",
-              "    print (shopping[i]);\n",
-              "}"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js"
+      ],
+      "metadata": {
+        "id": "VQDdGYatMCGY",
+        "outputId": "c132603e-d2e1-4917-c737-b3bd59ab2706",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ \u001b[32m'パン'\u001b[39m, \u001b[32m'牛乳'\u001b[39m, \u001b[32m'チーズ'\u001b[39m, \u001b[32m'ハム'\u001b[39m, \u001b[32m'麺'\u001b[39m ]\n",
+            "object\n",
+            "パン\n",
+            "タヒーニ\n",
+            "\u001b[33m2\u001b[39m\n",
+            "\u001b[33m7\u001b[39m\n",
+            "タヒーニ\n",
+            "牛乳\n",
+            "チーズ\n",
+            "ハム\n",
+            "麺\n"
+          ]
         }
       ]
     },
