Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPoAjBy5A13zTh6maPuviTM",
+      "authorship_tag": "ABX9TyOpKEJGlIuifzwxzl8WKnlx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1719,10 +1719,10 @@
       ],
       "metadata": {
         "id": "-qxQf64mE7md",
-        "outputId": "152f6766-bcdf-4ea3-9b03-37cfa06b920a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "152f6766-bcdf-4ea3-9b03-37cfa06b920a"
       },
       "execution_count": 11,
       "outputs": [
@@ -1742,10 +1742,10 @@
       ],
       "metadata": {
         "id": "7tQeZ1KYE8g8",
-        "outputId": "cd53f2f0-3f04-4c6e-f020-0d8a6fab8b7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd53f2f0-3f04-4c6e-f020-0d8a6fab8b7c"
       },
       "execution_count": 12,
       "outputs": [
@@ -1774,11 +1774,11 @@
         "console.log(s1 === s2); // error This condition will always return 'false' since ..."
       ],
       "metadata": {
-        "id": "S1ewbRAmbpyG",
-        "outputId": "f4a397e7-373c-46c7-c9f7-c9343dfa0fef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S1ewbRAmbpyG",
+        "outputId": "f4a397e7-373c-46c7-c9f7-c9343dfa0fef"
       },
       "execution_count": 17,
       "outputs": [
@@ -1810,6 +1810,21 @@
       "source": [
         "# いまここ"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# オブジェクトリテラル\n",
+        "# 広く使われるデータシリアライズ形式に JSON があるのはご存知でしょう。\n",
+        "# JSON は多くのプログラミング言語で用いられていますが、JSON は JavaScript Object Notation の略で、\n",
+        "# JSON の由来は JavaScript のオブジェクトリテラルにあります。\n",
+        "# そして、JavaScript では JSON をそのままオブジェクトリテラルとして解釈できます。"
+      ],
+      "metadata": {
+        "id": "kxGrtiujjBJi"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
