Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqnel2894d15CvBQ1DAzFR",
+      "authorship_tag": "ABX9TyN9JoXn5pzJir2MMCuku34q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "# メモ\n",
         "javascript を学んでいて行き詰まってしまったので、typescript 経由で学べないか。 google colaboratory を利用できないか。 ということでこのファイルを作った。\n",
         "\n",
-        "* https://typescriptbook.jp/ サバイバル TypeScript\n",
+        "* https://typescriptbook.jp/ サバイバル TypeScript <= これの読む TypeScript を読んでいるところ\n",
         "* qiita AtCoder Beginners Selection 解答例【TypeScript】\n",
         "* mdm web docs javascript\n",
         "* https://www.typescripttutorial.net/\n",
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1803,15 +1803,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# オブジェクトリテラル\n",
@@ -1846,7 +1837,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1869,7 +1860,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1881,6 +1872,93 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の連結\n",
+        "%%writefile temp.ts\n",
+        "const arr = [1, 2, 3];\n",
+        "const arr2 = [4, 5, 6];\n",
+        "const concat = [...arr, ...arr2];\n",
+        "// const cocat02 = arr + arr2\n",
+        "const concat03 = arr.concat(arr2)\n",
+        "console.log(concat)\n",
+        "// console.log(concat02)\n",
+        "console.log(concat03)"
+      ],
+      "metadata": {
+        "id": "LMeAlARzmzbg",
+        "outputId": "309af79f-2e06-4670-f88d-e470ed5beebd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js"
+      ],
+      "metadata": {
+        "id": "-u3cNnGEnLzD",
+        "outputId": "88bed296-4560-4687-f0ba-3916216b7848",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m ]\n",
+            "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "P_MuYagXnfIF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TfojjhDHnfDp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
