Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOsT6XwBMlevY4xVR3cIbI3",
+      "authorship_tag": "ABX9TyOJj9BBPnmJ4Yu2t15ycRBa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +48,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1883,15 +1882,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 配列の連結\n",
@@ -1975,7 +1965,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,40 +1982,204 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "Mba5YCMsMPib",
-        "outputId": "cb2d9041-45ed-4e89-b23b-4ad7b5b862ed",
+        "id": "Mba5YCMsMPib"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の非破壊的メソッド\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(1) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>メソッド</th><th>操作</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>concat</td><td>2つ以上の配列を結合した配列を返す</td></tr>\n",
+        "<tr><td>find</td><td>提供されたテスト関数を満たす配列内の最初の要素を返す</td></tr>\n",
+        "<tr><td>findIndex</td><td>配列内の指定されたテスト関数を満たす最初の要素の位置を返す</td></tr>\n",
+        "<tr><td>lastIndexOf</td><td>配列中で与えられた要素が見つかった最後のインデックスを返す</td></tr>\n",
+        "<tr><td>slice</td><td>配列の一部を切り出して返す</td></tr>\n",
+        "<tr><td>includes</td><td>配列に任意の要素が含まれているかをtrueかfalseで返す</td></tr>\n",
+        "<tr><td>indexOf</td><td>引数に与えられた内容と同じ内容を持つ最初の配列要素のインデックスを返す</td></tr>\n",
+        "<tr><td>join</td><td>全要素を連結した文字列を返す</td></tr>\n",
+        "<tr><td>keys</td><td>配列のインデックスをArray Iteratorオブジェクトで返す</td></tr>\n",
+        "<tr><td>entries</td><td>配列のインデックスと値のペアをArray Iteratorオブジェクトで返す</td></tr>\n",
+        "<tr><td>values</td><td>配列の値をArray Iteratorオブジェクトで返す</td></tr>\n",
+        "<tr><td>forEach</td><td>与えられた関数を、配列の各要素に対して一度ずつ実行する</td></tr>\n",
+        "<tr><td>filter</td><td>与えられた関数によって実装されたテストに合格したすべての配列からなる新しい配列を返す</td></tr>\n",
+        "<tr><td>flat</td><td>すべてのサブ配列の要素を指定した深さで再帰的に結合した新しい配列を返す</td></tr>\n",
+        "<tr><td>flatMap</td><td>最初にマッピング関数を使用してそれぞれの要素をマップした後、結果を新しい配列内にフラット化する</td></tr>\n",
+        "<tr><td>map</td><td>与えられた関数を配列のすべての要素に対して呼び出し、その結果からなる新しい配列を返す</td></tr>\n",
+        "<tr><td>every</td><td>列内のすべての要素が指定された関数で実装されたテストに合格するかどうかをテストする</td></tr>\n",
+        "<tr><td>some</td><td>配列の少なくともひとつの要素が、指定された関数で実装されたテストに合格するかどうかをテストする</td></tr>\n",
+        "<tr><td>reduce</td><td>配列のそれぞれの要素に対してユーザーが提供した「縮小」コールバック関数を呼び出す</td></tr>\n",
+        "<tr><td>reduceRight</td><td>アキュームレーターと配列のそれぞれの値に対して (右から左へ) 関数を適用して、単一の値にする</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "SXEooo1POPXe",
+        "outputId": "f36192de-dd9a-4e65-a624-8f8d6121ae2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 503
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(1) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>メソッド</th><th>操作</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>concat</td><td>2つ以上の配列を結合した配列を返す</td></tr>\n",
+              "<tr><td>find</td><td>提供されたテスト関数を満たす配列内の最初の要素を返す</td></tr>\n",
+              "<tr><td>findIndex</td><td>配列内の指定されたテスト関数を満たす最初の要素の位置を返す</td></tr>\n",
+              "<tr><td>lastIndexOf</td><td>配列中で与えられた要素が見つかった最後のインデックスを返す</td></tr>\n",
+              "<tr><td>slice</td><td>配列の一部を切り出して返す</td></tr>\n",
+              "<tr><td>includes</td><td>配列に任意の要素が含まれているかをtrueかfalseで返す</td></tr>\n",
+              "<tr><td>indexOf</td><td>引数に与えられた内容と同じ内容を持つ最初の配列要素のインデックスを返す</td></tr>\n",
+              "<tr><td>join</td><td>全要素を連結した文字列を返す</td></tr>\n",
+              "<tr><td>keys</td><td>配列のインデックスをArray Iteratorオブジェクトで返す</td></tr>\n",
+              "<tr><td>entries</td><td>配列のインデックスと値のペアをArray Iteratorオブジェクトで返す</td></tr>\n",
+              "<tr><td>values</td><td>配列の値をArray Iteratorオブジェクトで返す</td></tr>\n",
+              "<tr><td>forEach</td><td>与えられた関数を、配列の各要素に対して一度ずつ実行する</td></tr>\n",
+              "<tr><td>filter</td><td>与えられた関数によって実装されたテストに合格したすべての配列からなる新しい配列を返す</td></tr>\n",
+              "<tr><td>flat</td><td>すべてのサブ配列の要素を指定した深さで再帰的に結合した新しい配列を返す</td></tr>\n",
+              "<tr><td>flatMap</td><td>最初にマッピング関数を使用してそれぞれの要素をマップした後、結果を新しい配列内にフラット化する</td></tr>\n",
+              "<tr><td>map</td><td>与えられた関数を配列のすべての要素に対して呼び出し、その結果からなる新しい配列を返す</td></tr>\n",
+              "<tr><td>every</td><td>列内のすべての要素が指定された関数で実装されたテストに合格するかどうかをテストする</td></tr>\n",
+              "<tr><td>some</td><td>配列の少なくともひとつの要素が、指定された関数で実装されたテストに合格するかどうかをテストする</td></tr>\n",
+              "<tr><td>reduce</td><td>配列のそれぞれの要素に対してユーザーが提供した「縮小」コールバック関数を呼び出す</td></tr>\n",
+              "<tr><td>reduceRight</td><td>アキュームレーターと配列のそれぞれの値に対して (右から左へ) 関数を適用して、単一の値にする</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の破壊的メソッド\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(1) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>メソッド</th><th>操作</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>push</td><td>配列の末尾に要素を追加する</td></tr>\n",
+        "<tr><td>unshift</td><td>配列の最初に要素を追加する</td></tr>\n",
+        "<tr><td>pop</td><td>配列から最後の要素を取り除き、その要素を返す</td></tr>\n",
+        "<tr><td>shift</td><td>配列から最初の要素を取り除き、その要素を返す</td></tr>\n",
+        "<tr><td>splice</td><td>要素を取り除いたり、置き換えたり、新しい要素を追加する</td></tr>\n",
+        "<tr><td>sort</td><td>配列の要素をソートする</td></tr>\n",
+        "<tr><td>reverse</td><td>配列の要素を逆順に並び替える</td></tr>\n",
+        "<tr><td>fill</td><td>開始インデックスから終了インデックスまでのすべての要素を、静的な値に変更した配列を返す</td></tr>\n",
+        "<tr><td>copyWithin</td><td>サイズを変更せずに、配列の一部を同じ配列内の別の場所にシャローコピーして返す</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "_yDUzxJZMxDc",
+        "outputId": "139fa69d-8078-4583-a531-8606ce71fb90",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 250
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(1) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>メソッド</th><th>操作</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>push</td><td>配列の末尾に要素を追加する</td></tr>\n",
+              "<tr><td>unshift</td><td>配列の最初に要素を追加する</td></tr>\n",
+              "<tr><td>pop</td><td>配列から最後の要素を取り除き、その要素を返す</td></tr>\n",
+              "<tr><td>shift</td><td>配列から最初の要素を取り除き、その要素を返す</td></tr>\n",
+              "<tr><td>splice</td><td>要素を取り除いたり、置き換えたり、新しい要素を追加する</td></tr>\n",
+              "<tr><td>sort</td><td>配列の要素をソートする</td></tr>\n",
+              "<tr><td>reverse</td><td>配列の要素を逆順に並び替える</td></tr>\n",
+              "<tr><td>fill</td><td>開始インデックスから終了インデックスまでのすべての要素を、静的な値に変更した配列を返す</td></tr>\n",
+              "<tr><td>copyWithin</td><td>サイズを変更せずに、配列の一部を同じ配列内の別の場所にシャローコピーして返す</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 破壊的なメソッドを安全に使う方法 => コピーして使う\n",
+        "%%writefile temp.ts\n",
+        "const original = [1, 2, 3];\n",
+        "const copy = [...original]; // コピーを作る\n",
+        "copy.reverse();\n",
+        "console.log(original); // 破壊的操作の影響がない [ 1, 2, 3 ]\n",
+        "console.log(copy); // [ 3, 2, 1 ]"
+      ],
+      "metadata": {
+        "id": "eW8FFoBFOPRG",
+        "outputId": "6cd57477-ad03-4ef0-a500-b69156b3b26e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[96mtemp.ts\u001b[0m:\u001b[93m7\u001b[0m:\u001b[93m13\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2304: \u001b[0mCannot find name 'eq'.\n",
-            "\n",
-            "\u001b[7m7\u001b[0m console.log(eq(a,b))\n",
-            "\u001b[7m \u001b[0m \u001b[91m            ~~\u001b[0m\n",
-            "\n",
-            "\n",
-            "Found 1 error in temp.ts\u001b[90m:7\u001b[0m\n",
-            "\n",
-            "\u001b[33mtrue\u001b[39m\n",
-            "\u001b[33mfalse\u001b[39m\n",
-            "/content/temp.js:8\n",
-            "console.log(eq(a, b));\n",
-            "        ^\n",
-            "\n",
-            "ReferenceError: eq is not defined\n",
-            "    at Object.<anonymous> (/content/temp.js:8:9)\n",
-            "\u001b[90m    at Module._compile (internal/modules/cjs/loader.js:1063:30)\u001b[39m\n",
-            "\u001b[90m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1092:10)\u001b[39m\n",
-            "\u001b[90m    at Module.load (internal/modules/cjs/loader.js:928:32)\u001b[39m\n",
-            "\u001b[90m    at Function.Module._load (internal/modules/cjs/loader.js:769:14)\u001b[39m\n",
-            "\u001b[90m    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:72:12)\u001b[39m\n",
-            "\u001b[90m    at internal/main/run_main_module.js:17:47\u001b[39m\n"
+            "Writing temp.ts\n"
           ]
         }
       ]
@@ -2033,10 +2187,99 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "SXEooo1POPXe"
+        "id": "pRtGKz_fNy-M",
+        "outputId": "7c67333a-9657-4ab9-f231-e34f3f442b86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\n",
+            "[ \u001b[33m3\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m1\u001b[39m ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 一行に書く\n",
+        "%%writefile temp.ts\n",
+        "const original = [1, 2, 3];\n",
+        "const reversed = [...original].reverse();\n",
+        "console.log(original); // 破壊的操作の影響がない [ 1, 2, 3 ]\n",
+        "console.log(reversed); // [ 3, 2, 1 ]"
+      ],
+      "metadata": {
+        "id": "wARzuuk_N-Za",
+        "outputId": "26e2d085-74f7-45db-ad19-9b44b18905f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js"
+      ],
+      "metadata": {
+        "id": "FekbavFEOOCt",
+        "outputId": "dc6b7e33-42d3-4cae-bd57-ebeadd92c339",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\n",
+            "[ \u001b[33m3\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m1\u001b[39m ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# map の使い方\n",
+        "\n",
+        "const arr = [\"a\", \"b\", \"c\"];\n",
+        "const arr2 = arr.map((value) => value + value);\n",
+        "console.log(arr2); // [ 'aa', 'bb', 'cc' ]"
+      ],
+      "metadata": {
+        "id": "eGj9fOEkO9FX"
       },
       "execution_count": null,
       "outputs": []
@@ -2047,7 +2290,7 @@
         ""
       ],
       "metadata": {
-        "id": "eW8FFoBFOPRG"
+        "id": "fBcty588O88-"
       },
       "execution_count": null,
       "outputs": []
