Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbAFhU6E42okRUlwIia6sK",
+      "authorship_tag": "ABX9TyM6XIfPZpEXY93fvv2Nkjzu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,14 +58,14 @@
         "\n",
         "javascript を学んでいて行き詰まってしまったので、typescript 経由で学べないか。 google colaboratory を利用できないか。 ということでこのファイルを作った。\n",
         "\n",
-        "* https://typescriptbook.jp/ サバイバル TypeScript <= これの読む TypeScript を読んでいるところ\n",
-        "* qiita AtCoder Beginners Selection 解答例【TypeScript】\n",
-        "* mdm web docs javascript\n",
-        "* https://www.typescripttutorial.net/\n",
-        "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/javascript_aizuonline01.ipynb\n",
-        "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/functionaljavascript.ipynb\n",
+        "* qiita AtCoder Beginners Selection 解答例【TypeScript】10問だしこれをやるか\n",
+        "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/javascript_aizuonline01.ipynb 過去に作成したもの\n",
+        "* https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/functionaljavascript.ipynb 過去に作成したもの\n",
         "---\n",
-        "* learnjavascript.ipynb をコピペした => これを typescript 化する。=> 終了"
+        "* learnjavascript.ipynb をコピペした => これを typescript 化する。=> 終了\n",
+        "* https://typescriptbook.jp/ サバイバル TypeScript 良く書けている。日本語\n",
+        "* https://www.typescripttutorial.net/ => あまり良くないチュートリアルだと思う\n",
+        "* mdm web docs javascript これはこれでいいのだが。英語"
       ],
       "metadata": {
         "id": "DbSqJQo1j15z"
@@ -74,44 +74,21 @@
     {
       "cell_type": "code",
       "source": [
-        "!yarm --version"
-      ],
-      "metadata": {
-        "id": "WPDYZqjAVqwR",
-        "outputId": "2534ece6-e305-426a-86ae-845f04e231c6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: yarm: command not found\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# とりあえず入出力\n",
         "%%writefile temp.ts\n",
         "import * as fs from \"fs\";\n",
         "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "let name = inputs.split('\\n')[0].split(' ')[0];\n",
+        "let name : string = inputs.split('\\n')[0].split(' ')[0];\n",
         "console.log(\"Hello, \" + name)"
       ],
       "metadata": {
         "id": "Sos8UKrxYG7d",
-        "outputId": "c650e651-3921-4ca5-e99e-934dc051564c",
+        "outputId": "432c4cce-ddbd-4908-bccf-eb3cd4d5a691",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,12 +106,12 @@
       ],
       "metadata": {
         "id": "KMQ-v2w3YnRx",
-        "outputId": "27ce0f22-f0b9-4976-f7cf-8703b5d96b11",
+        "outputId": "96fcbba8-843b-4bda-9691-8f19e549126c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,6 +875,7 @@
       "cell_type": "code",
       "source": [
         "# 問題 A Product\n",
+        "# AtCoder Beginners Selection\n",
         "# a, b の積が偶数なら Even 奇数なら Odd と出力する\n",
         "%%writefile temp.ts\n",
         "import * as fs from \"fs\";\n",
@@ -963,6 +941,7 @@
       "cell_type": "code",
       "source": [
         "# 問題 A - Placing Marbles \n",
+        "# AtCoder Beginners Selection\n",
         "# 3 つのマスからなるマス目。各マスには 0 か 1 が書かれている。\n",
         "# 1 の数を出力する\n",
         "\n",
@@ -2262,15 +2241,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# for-of 文\n",
@@ -2287,7 +2257,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2310,7 +2280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2343,7 +2313,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2366,7 +2336,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2395,7 +2365,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2418,7 +2388,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2430,12 +2400,72 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# AtCoder Beginners Selection\n",
+        "# 問題 B - Shift only \n",
+        "# 黒板に N 個の正の整数 A が書かれています．\n",
+        "# 書かれている整数がすべて偶数であるとき，次の操作を行うことができます．\n",
+        "# 黒板に書かれている整数すべてを，2 で割ったものに置き換える．\n",
+        "# 最大で何回操作を行うことができるかを求めてください．\n",
+        "# 3 8 12 40 #=> 2\n",
+        "# 4 5 6 8 10 #=> 0\n",
+        "# 6 382253568 723152896 37802240 379425024 404894720 471526144 #=> 8\n",
+        "%%writefile temp.ts\n",
+        "import * as fs from \"fs\";\n",
+        "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = inputs.split('\\n')[0].split(' ')[0];\n",
+        "console.log(\"Hello, \" + name)\n",
+        "\n",
+        "/*\n",
+        "function main(input: string) {\n",
+        "  const args: string[] = input.split('\\n');\n",
+        "  const n: number = parseInt(args[0], 10);\n",
+        "  let a: number[] = args[1].split(' ').map((n) => parseInt(n, 10));\n",
+        "\n",
+        "  let ans: number = 0;\n",
+        "  while (a.every((n: number) => n % 2 === 0)) {\n",
+        "    a = a.map((n: number) => n / 2);\n",
+        "    ans++;\n",
+        "  }\n",
+        "  console.log(ans);\n",
+        "} */\n",
+        "\n",
+        "// main(require('fs').readFileSync('/dev/stdin', 'utf8'));"
+      ],
+      "metadata": {
+        "id": "FBvwsDIbREPO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "FBvwsDIbREPO"
+        "id": "WI8cy28cLMRE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "cAtMMcGuKorF"
       },
       "execution_count": null,
       "outputs": []
